--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve:all": "concurrently \"npm run serve:api\" \"npm run serve:web\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "ex:file": "npx nyc report --reporter=lcov"
   },
   "private": true,
   "dependencies": {
@@ -27,7 +28,7 @@
     "json-server": "^0.17.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^18.0.0",
@@ -50,5 +51,10 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "ngx-build-plus": "^13.0.0",
     "typescript": "~4.4.3"
+  },
+  "nyc": {
+    "exclude" : [
+      "src/app/app.component.ts"
+    ]
   }
 }
